force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/Compliance_Incoming_Email_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Incoming Email Settings</label>
    <pluralLabel>Compliance Incoming Email Settings</pluralLabel>
</CustomObject>