force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <description>Ending Domain Name of Receiving email</description>
    <label>Domain Name</label>
    <type>TextArea</type>
</CustomField>