force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Origin of the Email</description>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Screen Scrape</fullName>
            </value>
            <value>
                <fullName>Email Subscription</fullName>
            </value>
            <value>
                <fullName>Email Agency Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>