force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Depending on the Domain and Key Values in the subject assign the Cases to the particular Queue</description>
    <label>Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>