force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Standard Case Record Type</description>
    <label>Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>