force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/fields/Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Email__c</fullName>
    <description>Standard receiving Gusto email</description>
    <label>Service Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>