force-app/main/default/objects/Compliance_Incoming_Email_Settings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Assigning type to Payroll Compliance Inquiry in Case</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Compliance Inquiry</fullName>
                <default>true</default>
                <label>Payroll Compliance Inquiry</label>
            </value>
            <value>
                <fullName>Benefits Compliance Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>